fixed scripture spacing added another verse

--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,7 @@
   font-weight: bold;
   color: rgb(106, 28, 122);
   font-size: .95rem;
+  margin-top: 3px;
 }
 
 .bible-verse {
